--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -45,8 +45,9 @@
     margin-top:10px;
   }
   .input-container1 h3{
-    text-align: center;
-    margin-bottom: 0px;
+
+    margin-bottom: 10px;
+    margin-left: 100px;
   }
 
   .input-container2 {
@@ -75,12 +76,12 @@
     margin-top:10px;
   }
    .input-container2 h3{
-    margin-bottom: -10px;
-    text-align: center;
+    margin-bottom: 0px;
+    margin-left: 100px;
   }
 
   .input-container3 {
-    margin-left: 5px;
+    margin-left:30px;
     margin-top: 20px;
     display: flex;
     flex-direction: column;
@@ -119,7 +120,7 @@
   .input-container4 input{
     margin-top: 0px;
     height: 1.5em;
-    width: 7em;
+    width: 6em;
     border-radius: 15px;
     border-width: 15px;
     border:white;
@@ -131,6 +132,38 @@
 
   .input-container4 button{
     margin-top:10px;
+  }
+  .input-container4 h3{
+    text-align: center;
+  }
+
+  .input-container5 {
+    margin-left:-40px;
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+  }
+
+  .input-container5 input{
+    margin-top: 0px;
+    margin-left: 20px;
+    height: 1.5em;
+    width: 7em;
+    border-radius: 15px;
+    border-width: 15px;
+    border:white;
+    box-shadow: 0 0 6px rgb(166, 159, 255);
+    outline: none;
+    padding:10px;
+    font-size: 10px;
+  }
+
+  .input-container5 button{
+    margin-top:10px;
+  }
+  .input-container5 h3{
+    text-align: center;
   }
 
   
@@ -330,7 +363,7 @@ box-shadow: 0 0 12px rgb(199, 199, 199);
     font-size: 20px;
   }
 
-  .loginContainer h5{
-    font-size: 10px;
+
+  .loginContainer h4{
     color: red;
   }
